[gd_scene load_steps=5 format=3 uid="uid://cwtqnnvw712bb"]

[ext_resource type="Script" path="res://scenes/settings/settings_menu.gd" id="1_m2k3p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8w2r"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.678431, 0.647059, 0.584314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6n3p"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.780392, 0.745098, 0.678431, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xk8p"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.580392, 0.552941, 0.498039, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2k3p")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_colors/font_outline_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="ResolutionContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="CenterContainer/VBoxContainer/ResolutionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_q8w2r")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6n3p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3xk8p")

[node name="FullscreenContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="CenterContainer/VBoxContainer/FullscreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ApplyButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_q8w2r")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6n3p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3xk8p")
text = "APPLY"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_q8w2r")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6n3p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3xk8p")
text = "BACK"
